2019-06-13  Richard Biener  <rguenther@suse.de>

	* tree-vectorizer.h (vect_loop_vectorized_call): Declare.
	* tree-vectorizer.c (vect_loop_vectorized_call): Export and
	also return the condition stmt.
	* tree-vect-loop-manip.c (vect_loop_versioning): Compute outermost
	loop we can version and version that, reusing the loop version
	created by if-conversion instead of versioning again.

2019-06-13  Aldy Hernandez  <aldyh@redhat.com>

	* gimple-loop-versioning.cc (prune_loop_conditions): Use
	may_contain_p.
	* tree-vrp (value_range_base::may_contain_p): Call into
	value_inside_range.
	(value_inside_range): Make private inside value_range_base class.
	Take min/max from *this.
	(range_includes_p): Remove.
	* tree-vrp.h (value_range_base): Add value_inside_range.
	(range_includes_p): Remove.
	(range_includes_zero_p): Call may_contain_p.
	* vr-values.c (compare_range_with_value): Same.

2019-06-13  Claudiu Zissulescu  <claziss@synopsys.com>

	* doc/extend.texi (ARC Function Attributes): Update info.

2019-06-13  Feng Xue  <fxue@os.amperecomputing.com>

	PR tree-optimization/89713
	* doc/invoke.texi (-ffinite-loops): Document new option.
	* common.opt (-ffinite-loops): New option.
	* tree-ssa-dce.c (mark_stmt_if_obviously_necessary): Mark
	IFN_GOACC_LOOP calls as necessary.
	* tree-ssa-loop-niter.c (finite_loop_p): Assume loop with an exit
	is finite.
	* omp-offload.c (oacc_xform_loop): Skip lowering if return value of
	IFN_GOACC_LOOP call is not used.
	* opts.c (default_options_table): Enable -ffinite-loops at -O2+.

2019-06-13  Kugan Vivekanandarajah  <kugan.vivekanandarajah@linaro.org>

	PR target/88838
	* tree-vect-loop-manip.c (vect_set_loop_masks_directly): If the
	compare_type is not with Pmode size, we will create an IV with
	Pmode size with truncated use (i.e. converted to the correct type).
	* tree-vect-loop.c (vect_verify_full_masking): Find IV type.
	(vect_iv_limit_for_full_masking): New. Factored out of
	vect_set_loop_condition_masked.